--- a/scss/_fn.scss
+++ b/scss/_fn.scss
@@ -43,3 +43,12 @@
     }
   }
 }
+
+// Icon navbar
+.icon {
+  margin-right: 15px;
+  font-size: $secundario;
+  display: flex;
+  justify-content: end;
+}
+
