--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -8,14 +8,11 @@ $orange: #ffab4c;
 $titulos: "Teko", sans-serif;
 $titSecundario: "Nunito Sans", sans-serif;
 $contenido: "Roboto", sans-serif;
+$reloj: 'VT323', monospace;
 
 // Tamaño
 $principal: 4rem;
 $secundario: 2rem;
 $textContenido: 1.2rem;
 
-// Icon navbar
-.icon {
-  margin-right: 0.5rem;
-  font-size: $secundario;
-}
+
