--- a/scss/_pagos.scss
+++ b/scss/_pagos.scss
@@ -49,6 +49,7 @@ body {
           .title-prod {
             display: flex;
             flex-direction: column;
+            width: 50%;
           }
           img {
             width: 80px;
